--- a/myStyle.css
+++ b/myStyle.css
@@ -8,7 +8,12 @@ h1 {
 	font-family: Courier New;
 }
 
+h2{
+  text-align: center;
+  font-size: 25px;
+  font-family: Courier New;
 
+}
 img {
 	width: 85;
 	height: 25;
@@ -20,6 +25,30 @@ footer{
 	text-align: center;
 	font-size: 10px;
 	padding: 100px;
+}
+
+table{
+  width: 85%;
+  margin: 0 auto;
+  padding: 15px;
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+
+th{
+  border: 1px solid black;
+  text-align: center;
+  padding: 10px;
+  background-color: #BEEFBC;
+  font-family: Arial;
+}
+
+td{
+  border: 1px solid black;
+  padding: 10px;
+  background-color: #F7F7F7;
+  font-family: Arial; 
 }
 
 li{
