--- a/myStyle.css
+++ b/myStyle.css
@@ -21,6 +21,11 @@ img {
 	margin: 0 auto;
 }
 
+p{
+  text-align: center;
+  font-family: Courier New;
+  font-size: 20px;
+}
 footer{
 	text-align: center;
 	font-size: 10px;
@@ -57,6 +62,11 @@ li{
 	margin: 300px;
 	margin-top: 5px;
 	margin-bottom: 0px;
+}
+
+img .thumbnail{
+  height: 25;
+  width: 25;
 }
 
 .headingBox{
